feat: Implement pagination for product index and enhance order show view; update seeds for user creation
